<resources>
    <string name="app_name">MonEcoWatt</string>
    <string name="bienvenu">Bienvenue sur MonEcoWatt \nLa météo de l\'électricité en \ntemps réel</string>
    <string name="chargement">Chargement…</string>
    <string name="image_de_d_marrage">Image de démarrage</string>
    <string name="bnm_first_item">Principal</string>
    <string name="bnm_second_item">Les éco-gestes</string>
    <string name="bnm_third_item">A propos</string>
    <string name="prensentation_ecogestes"> Pour une consommation éléctrique responsable : \n Économisons l\’électricité lors des périodes de forte consommation grâce aux <b>ECOGESTES</b>  </string>
    <string name="Eco1">Agir en cas de signal orange ou rouge :</string>
    <string name="Eco1_1">1) Réduire autant que possible la température du chauffage</string>
    <string name="Eco1_2">2) Décaler certains usages domestiques (lave-vaisselle, machine à laver, etc.)</string>
    <string name="Eco1_3">3) Modérer l\'utilisation des appareils de cuisson</string>
    <string name="Eco1_4">4) Eteindre les lumières inutiles</string>
    <string name="Eco1_5">5) Prévoir une programmation spécifique du chauffage ( en réduisant la température de 1°C supplémentaire)</string>
    <string name="Eco1_6">6) Dans les locaux tertiaires, réduire le débit de ventilation au strict besoin du bâtiment</string>
    <string name="Eco1_7">7) Réduire l\'éclairage intérieur des bâtiment</string>
    <string name="Eco1_8">8) Réduire l\'éclairage public</string>
    <string name="Eco1_9">9)Eviter de recharger les véhicules électriques pendant les périodes de tension</string>
    <string name="Eco1_10">10) Couper les affichages et éclairages non essentiels (par ex. : les panneaux publicitaires)</string>
    <string name="Eco2">Consommer au meilleur moment :</string>
    <string name="Eco2_1">1) Faire fonctionner le chauffe-eau pendant les heures creuses</string>
    <string name="Eco2_2">2) Décaler certains usages domestiques (lavage, etc.)</string>
    <string name="Eco2_3">3) Recharger les véhicules électriques pendant les heures creuses</string>
    <string name="Eco2_4"> 4) Limiter la consommation en fin de journée et nuit</string>
    <string name="Eco2_5">5) Anticiper la montée en température des bureaux et commerces avant 8 h</string>
    <string name="Eco3">Economiser l\'énergie :</string>
    <string name="Eco3_1">1) Baisser la température du chauffage à 19°C</string>
    <string name="Eco3_2">2) Généraliser l\'éclairage LED</string>
    <string name="Eco3_3">3) Couvrir les casseroles et les poêles pour raccourcir le temps de cuisson</string>
    <string name="Eco3_4">4) Réduire l\'utilisation de l\'eau chaude</string>
    <string name="Eco3_5">5) Régler la température de production d\'eau chaude (au minimum à 55°C)</string>
    <string name="start">Start</string>
    <string name="refresh">Refresh button</string>
    <string name="scrolling_view">Scrolling view</string>
    <string name="presentation_a_propos"> Voici la page à propos vous trouverez ici les informations et options relatives à notre application :</string>
    <string name="projet">But de notre projet:</string>
    <string name="blabla">Dans le cadre d\'un projet pour notre 2ème année de BUT Réseaux et Télécommunications, nous avons créé une application à l\'aide d\'Android Studio permettant d\'afficher les données du site d\'Ecowatt. Nous avons donc fait au mieux pour rendre l\'expérience utilisateur la plus fluide possible. Bonne visite \!</string>
    <string name="elec">Image electricité</string>
    <string name="horloge">Horloge verte</string>
    <string name="ecoenergie">"image d'eco energie "</string>
    <string name="piechart">Graphique du risque de panne journalier</string>
</resources>