<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/header_backg"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:circularflow_radiusInDP="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/launcher_logo_ecowatt" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/refresh"
                android:src="@drawable/ic_reload"
                android:onClick="refreshData"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>


        <ScrollView
            android:contentDescription="@string/scrolling_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/scroll_backg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blanc_casse"
                    android:layout_marginVertical="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prensentation_ecogestes"
                        android:fontFamily="@font/police_bizarre"
                        android:textColor="#191970"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        />
                </androidx.cardview.widget.CardView>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:contentDescription="@string/elec"
                    android:src="@drawable/energie_rouge"

                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blanc_casse"
                    android:layout_marginVertical="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Eco1"
                            android:fontFamily="@font/police_bizarre"
                            android:textColor="#191970"
                            android:textAlignment="center"
                            android:textSize="20sp"/>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">



                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco1_1"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco1_2"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco1_3"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco1_4"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco1_5"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:gravity="center_vertical"
                                android:text="@string/Eco1_6"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:gravity="center_vertical"
                                android:text="@string/Eco1_7"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:gravity="center_vertical"
                                android:text="@string/Eco1_8"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:gravity="center_vertical"
                                android:text="@string/Eco1_9"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:gravity="center_vertical"
                                android:text="@string/Eco1_10"/>
                        </LinearLayout>



                    </LinearLayout>




                </androidx.cardview.widget.CardView>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/horloge_verte"
                    android:contentDescription="@string/horloge" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blanc_casse"
                    android:layout_marginVertical="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Eco2"
                            android:fontFamily="@font/police_bizarre"
                            android:textColor="#191970"
                            android:textAlignment="center"
                            android:textSize="20sp"/>



                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">



                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco2_1"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco2_2"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco2_3"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco2_4"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco2_5"/>

                        </LinearLayout>
                    </LinearLayout>





                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/eco_energie"

                    android:contentDescription="@string/ecoenergie" />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blanc_casse"
                    android:layout_marginVertical="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Eco3"
                            android:fontFamily="@font/police_bizarre"
                            android:textColor="#191970"
                            android:textAlignment="center"
                            android:textSize="20sp"/>




                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">



                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco3_1"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco3_2"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco3_3"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco3_4"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:text="@string/Eco3_5"/>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blanc_casse"
                    android:layout_marginVertical="10dp">






                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </ScrollView>





        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bnmView"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:background="@color/header_backg"
            app:itemTextColor="@color/vert_clair"
            app:itemRippleColor="@color/blanc_casse"
            app:itemIconTint="@color/vert_clair"
            app:menu="@menu/bottomnavigationmenu"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>