<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/miPrinc"
        android:title="@string/bnm_first_item"
        android:contentDescription="@string/bnm_first_item"
        android:icon="@drawable/ic_compact" />

    <item
        android:id="@+id/miMap"
        android:title="@string/bnm_second_item"
        android:contentDescription="@string/bnm_second_item"
        android:icon="@drawable/ic_map" />

    <item
        android:id="@+id/miHistorique"
        android:title="@string/bnm_third_item"
        android:contentDescription="@string/bnm_third_item"
        android:icon="@drawable/ic_calendar" />

    <item
        android:id="@+id/miPropos"
        android:title="@string/bnm_fourth_item"
        android:contentDescription="@string/bnm_fourth_item"
        android:icon="@drawable/ic_info" />
</menu>