<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/header_backg"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:circularflow_radiusInDP="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/launcher_logo_ecowatt" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/refresh"
                android:src="@drawable/ic_reload"
                android:onClick="refreshData"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>


        <ScrollView
            android:contentDescription="@string/scrolling_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/scroll_backg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blanc_casse"
                    android:layout_marginVertical="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/blanc_casse"
                        android:text="@string/presentation_a_propos"
                        android:fontFamily="@font/police_bizarre"
                        android:textColor="#191970"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        />
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    >
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/iut2"
                        android:contentDescription="@string/app_name"
                        />
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/logo_ecowatt_onboarding"
                        />
                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/blanc_casse"
                            android:text="@string/projet"
                            android:fontFamily="@font/police_bizarre"
                            android:textColor="#191970"
                            android:textAlignment="center"
                            android:textSize="20sp"/>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">



                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/blanc_casse"
                                android:fontFamily="@font/police_bizarre"
                                android:textColor="#000000"
                                android:paddingStart="20dp"
                                android:paddingEnd="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/blabla"/>



                        </LinearLayout>



                    </LinearLayout>




                </androidx.cardview.widget.CardView>
                <!-- Comming soon feature : Theme SWITCH & Notification SWITCH
               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">


                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:background="@color/header_backg"
                       android:orientation="horizontal"
                       android:paddingHorizontal="20dp"
                       android:paddingVertical="10dp">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_centerVertical="true"
                       android:fontFamily="@font/police_bizarre"
                       android:textColor="@color/blanc_casse"
                       android:textSize="17dp"
                       android:text="@string/notif" />


                   <androidx.appcompat.widget.SwitchCompat
                       android:layout_width="60dp"
                       android:layout_height="50dp"
                       android:id="@+id/switch_notif"
                       android:layout_alignParentRight="true"
                       android:layout_centerVertical="true"
                       android:textColor="@color/orange_al"/>
                   </RelativeLayout>


               </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/header_backg"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/police_bizarre"
                        android:textColor="@color/blanc_casse"
                        android:textSize="17dp"
                        android:text="@string/theme" />


                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_theme"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/orange_al" />
                </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp">






                </androidx.cardview.widget.CardView>
                Comming soon feature : Theme SWITCH & Notification SWITCH -->

            </LinearLayout>

        </ScrollView>





        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bnmView"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:background="@color/header_backg"
            app:itemTextColor="@color/vert_clair"
            app:itemRippleColor="@color/blanc_casse"
            app:itemIconTint="@color/vert_clair"
            app:menu="@menu/bottomnavigationmenu"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
